DevOrg/src/objects/Dummy_Object__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Opportunity_Won__c</fullName>
        <formula>IF(ISPICKVAL( Opportunity_Name__r.StageName, &apos;Won&apos;), Opportunity_Name__r.Amount , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Opportunity Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Dummy Objects</relationshipLabel>
        <relationshipName>Dummy_Objects</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Dummy Objects</relationshipLabel>
        <relationshipName>Dummy_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Relationship_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Name</label>
        <referenceTo>Relationship__c</referenceTo>
        <relationshipLabel>Dummy Objects</relationshipLabel>
        <relationshipName>Dummy_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Won_Opportunity__c</fullName>
        <formula>IF(ISPICKVAL(Opportunity_Name__r.StageName,&apos;Won&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Won Opportunity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Dummy Object</label>
    <nameField>
        <label>Dummy Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>